--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "dependencies": {
     "express": "^4.13.4",
     "socket.io": "^1.4.5",
-    "node-gcm": "^0.14.0"
+    "node-gcm": "^0.14.0",
+    "body-parser": "^1.15.0"
   },
   "devDependencies": {},
   "scripts": {
