--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "express": "^4.13.4",
     "socket.io": "^1.4.5",
     "node-gcm": "^0.14.0",
-    "body-parser": "^1.15.0"
+    "body-parser": "^1.15.0",
+    "cookie-parser": "^1.4.1"
   },
   "devDependencies": {},
   "scripts": {
