--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "1.0.0",
   "main": "server.js",
   "dependencies": {
-    "express": "^4.13.4",
-    "socket.io": "^1.4.5",
-    "node-gcm": "^0.14.0",
     "body-parser": "^1.15.0",
-    "cookie-parser": "^1.4.1"
+    "cookie-parser": "^1.4.1",
+    "express": "^4.13.4",
+    "node-gcm": "^0.14.0",
+    "serve-favicon": "^2.3.0",
+    "socket.io": "^1.4.5"
   },
   "devDependencies": {},
   "scripts": {
